k3s-userapps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
      - name: n8n
        image: n8nio/n8n:1.123.5
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: n8n-data
          mountPath: /root/.n8n
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        securityContext:
          runAsUser: 0
          runAsGroup: 0
      volumes:
      - name: n8n-data
        persistentVolumeClaim:
          claimName: n8n-data
